--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -1,8 +1,8 @@
 <h1> Bookmarks </h1>
 <form action='/url' method='post'>
-    <label for="title"> Add bookmark title </label>
-    <input type="text" name="title">
-    <label for="url"> Add bookmark url </label>
+    <label for="title"> Add bookmark title:  </label>
+    <input type="text" name="title"> <br><br>
+    <label for="url"> Add bookmark url:   </label>
     <input type="text" name="url">
     <input type="submit" value="Submit">
 </form>
